--- a/mohan.html
+++ b/mohan.html
@@ -14,7 +14,7 @@
         <h2>About Me</h2>
         <p>
             I am a Computer Science Engineering student interested in web development
-            and programming. I am learning HTML, CSS, C, and Python.
+            and programming. I am learning HTML, CSS, C, and Java.
         </p>
     </section>
     <section class="skills">
@@ -23,8 +23,8 @@
             <li>HTML</li>
             <li>CSS</li>
             <li>C Programming</li>
-            <li>Python Basics</li>
-            <li>Git & GitHub</li>
+            <li>Java</li>
+            <li>Sql</li>
         </ul>
     </section>
     <section class="projects">
@@ -40,8 +40,8 @@
         </div>
     </section> 
     <section class="contact">
-        <h2>Contact Me</h2>
-        <p>Email: mohanram@gmail.com</p>
+        <h2>Contact Me:6381828812</h2>
+        <p>Email: mohanramme123@gmail.com</p>
         <p>GitHub: github.com/mohanrammcs24-coder</p>
     </section>
 </body>
